Updates to chord html and contact html

--- a/app/templates/chord.html
+++ b/app/templates/chord.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Patrick's Test</title>
+<title>Sept192014</title>
 <style>
 
 /* @import url(../static/css/style.css); */
@@ -68,6 +68,7 @@ display: none;
     </div>
     
 <div class="container">
+    <div class="hero-unit">
 <br><br>
     <div class="row row-centered">
  
@@ -135,6 +136,15 @@ display: none;
     
     </div>
 
+<hr>
+
+<footer>
+    <p>Modified from Andrew RP's <a href="http://bl.ocks.org/AndrewRP/7468330">city visualization</a></p>
+    <p><p>Built with <a href="http://d3js.org/">d3.js</a>.</aside></p>
+    <p>Data from <a href="https://foursquare.com/">4square</a>.</p>
+</footer>
+
+</div>
     
 </div>
 
@@ -237,12 +247,7 @@ display: none;
  
     </script>
  
+
 </body>
  
- <br><br><br><br>
 
-<footer>
-<p>Modified from Andrew RP's <a href="http://bl.ocks.org/AndrewRP/7468330">city visualization</a></p>
-<p><p>Built with <a href="http://d3js.org/">d3.js</a>.</aside></p>
-<p>Data from <a href="https://foursquare.com/">4square</a>.</p>
-</footer>
