--- a/app/templates/chord.html
+++ b/app/templates/chord.html
@@ -78,11 +78,11 @@ display: none;
     what are your chances you could find a neighborhood to visit where you could find both
     a sushi restaurant and a fast-food restaurant?
     If you guessed this isn't easy, you'd have been right, but how can we verify this hunch?  
-    Time for a bit of statistics with a bit of data-hacking.  
+    Time for a bit of statistics with a bit of data-hacking.  <br><br>
     
     Lets pull the restaurant data from foursquare using the city centers of the 294 most
     populous cities in the US, as our test bed.  That's NYC to College Station, Texas if
-    you were wondering.
+    you were wondering. <br><br>
     
     We divide the restaurants found into the ten most common categories for restaurants 
     and illustrate the number of times we find restaurants of type X and Y together, what
@@ -95,7 +95,7 @@ display: none;
     diagram.  But let's be quantitative, we need to ask if this is really significant. 
     There are a lot of American
     restaurants in the US (surprise!) so even if we randomly threw our restaurants into 
-    groupings we'd expect to see a decent amount of co-occurrence.
+    groupings we'd expect to see a decent amount of co-occurrence. <br><br>
     
     To test this we can use a permutation test, shuffling the labels on all of our restaurant
     data many times.  For each shuffle we then have a set of if humans built restaurants
@@ -106,7 +106,7 @@ display: none;
     Mexican, a sushi joint, and a fast food place they might be labeled four American, two Chinese and 
     an Ethiopian restaurant.  Because we only shuffle the labels, not label randomly, 
     the total number of restaurants of a given category is constant, we don't get to destroy
-    fast food places, no matter how much we might like to.
+    fast food places, no matter how much we might like to. <br><br>
     
     Doing this shuffle 1000 times we can visualize the distribution we'd expect if restaurants
     were built with no regard to their restaurant categories.  Having done this we can characterize
@@ -126,7 +126,7 @@ display: none;
     Does this make sense?  Kind-of, after all the idea
     of "Chinatown" is relatively common in most major cities, and we biased ourselves by only
     pulling data from these metropolitan areas.  We might expect that if we looked at more 
-    rural areas this significance measure would go down (I encourage you to try it!).
+    rural areas this significance measure would go down (I encourage you to try it!). <br><br>
     
     We also see an answer to our original question, it turns out sushi places and fast-food
     restaurants are found together less often than we'd expect at random.  So I hope you and
