--- a/app/templates/FoodGrouprSlides/index.html
+++ b/app/templates/FoodGrouprSlides/index.html
@@ -67,7 +67,7 @@
 
               Foodgroupr was developed after the writer moved and expereinced frustratuion when trying to find a good place to eat due to a lack of a tools to give the user a bird's eye view of the centers of communities.  Made as part of an Insightdatascience project, foodgroupr pulls local restaurant data from <a href="http://foursquare.com">Foursquare</a> thanks to their generous API.  Please hit up their site as well if you liked the tool.  <br><br>
 
-              Wow, still reading, ok, cool.  If you like what we do (or don't like what we do) we're always happy to hear from you, so head over to contact to connect with us.  If you would rather view through some slides that's cool too, they're too the right of this but I'm sure you already saw them.
+              Wow, still reading, ok, cool.  If you like what we do (or don't like what we do) we're always happy to hear from you, so head over to contact to connect with us.  If you would rather view through some slides that's cool too, they're to the right of this but I'm sure you already saw them.
             </p>
             </div> <!-- End descritipn div -->
           </div> <!-- End Row -->
