--- a/app/templates/results3.html
+++ b/app/templates/results3.html
@@ -112,7 +112,7 @@
                   </div>
                 </div>
                 <div class="panel-footer">
-                  <div class = row >
+                  <div class = "row" >
                     <div class = "col-sm-4">
                     <small> Restaurants: {{ thiscard['rest_num'] }} </small>
                     </div>
