--- a/app/templates/results3.html
+++ b/app/templates/results3.html
@@ -212,7 +212,7 @@
               })
 
             var chHtml ="<a href="+thisUrl
-                        +" target='_blank'>"+thisName+"</a></h3><div>"
+                        +" target='_blank'>"+thisName+"</a><div>"
                         +"<img src="+thisPic
                         +" width='100' hieght='100' />"
                         +"</div>";
