Updates for better wording on the about page

--- a/app/templates/chord.html
+++ b/app/templates/chord.html
@@ -133,6 +133,8 @@ display: none;
     your friend can think of some new ideas.  If you're looking to get into the food business
     however, maybe there's a market for a fast-food sushi place, would be interesting to find
     out. 
+
+    -Patrick Phelps
     
     </div>
 
